<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">سقاية</string>
    <string name="email">البريد الالكتروني</string>
    <string name="phone_number">رقم الجوال</string>
    <string name="search">ابحث</string>
    <string name="saved_location">اختر من العناوين المسجلة</string>
    <string name="cancel">إلغاء</string>
    <string name="save_places">العناوين المسجلة</string>
    <string name="date">التاريخ</string>
    <string name="time">الوقت</string>
    <string name="time_title">اختر توقيت الطلب</string>
    <string name="payment_method">طريقة الدفع</string>
    <string name="credit_card">بطاقة الإئتمان</string>
    <string name="sadad">سداد</string>
    <string name="transaction_approved">العملية</string>
    <string name="order_items">أصناف الطلب</string>
    <string name="payment_details">تفاصيل الدفع</string>
    <string name="delivery_location">عنوان التوصيل</string>
    <string name="delivery_time">وقت التوصيل</string>
    <string name="done">تم</string>
    <string name="next">التالي</string>
    <string name="delivery">التوصيل</string>
    <string name="confirm">تأكيد</string>
    <string name="cost">التكلفة</string>
    <string name="total">الإجمالي: </string>
    <string name="quantity">الكمية: </string>
    <string name="bottle_per_package">زجاجة / عبوة</string>
    <string name="litre">لتر</string>
    <string name="box">كرتونة</string>
    <string name="rs">ريال سعودي</string>
    <string name="checkout">الدفع</string>
    <string name="add_to_cart">إضافة إلى العربة</string>
    <string name="password">كلمة المرور</string>
    <string name="username">اسم المستخدم</string>
    <string name="register">سجل الان</string>
    <string name="login">تسجيل الدخول</string>
    <string name="bank_transfer">التحويل البنكي</string>
    <string name="price">السعر</string>
    <string name="size">الحجم</string>
    <string name="re_password">أعد كتابة كلمة المرور</string>
    <string name="sign_up_with">يمكنك الدخول بواسطة</string>
    <string name="create_account">إنشاء حساب</string>
    <string name="pick_date">أختر تاريخ</string>
    <string name="pick_time">أختر توقيت</string>
    <string name="copyright">©جميع حقوق الطبع محفوظة لشركة NTG Clarity</string>
    <string name="sort">الترتيب علي حسب</string>
    <string name="history">الطلبات السابقة</string>
    <string name="order_summary">"الملخص"</string>
    <string name="loading_indicator_message">"فى انتظار التحميل"</string>
    <string name="in_progress">مرحلة التجهيز</string>
    <string name="delivered">تم التوصيل</string>
    <string name="canceled">تم إلغاء الطلب</string>
    <string name="shopping_cart">عربة البضائع</string>
    <string name="order_details">تفاصيل الطلب</string>
    <string name="order_status">حالة الطلب</string>
    <string name="shipment_no">رقم الطلب</string>
    <string name="delivery_date">تاريخ وصول الطلب</string>
    <string name="track_order">متابعة الطلب</string>
    <string name="shipped">تم الشحن</string>
    <string name="order_date">تاريخ الطلب</string>
    <string name="sign_out">تسجيل الخروج</string>
    <string name="arabic">ع</string>
    <string name="english">En</string>
    <string name="no_items">العربة فارغة</string>
    <string name="favourite">favourites</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>