<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="Search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/cart"
        android:title="shopping"
        app:actionLayout="@layout/badge"
        app:showAsAction="always" />
    <item
        android:id="@+id/history"
        android:title="@string/history"
        android:icon="@drawable/ic_history"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/sign_out"
        android:title="@string/sign_out"
        android:icon="@drawable/ic_history"
        app:showAsAction="ifRoom"/>

</menu>